# KoffeeKrew-AutoScape

./: CMakeLists.txt  KoffeeKrew-AutoScape.cpp  KoffeeKrew-AutoScape.h  README.md
include/: AutoSplasher.h  KoffeeKrew-AutoScape.h
src/: AutoSplasher.cpp  KoffeeKrew-AutoScape.cpp
